[gd_scene load_steps=16 format=2]

[ext_resource path="res://Entities/PlayerController/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/PlayerGUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://res/sfx/jet.ogg" type="AudioStream" id=3]
[ext_resource path="res://Entities/PlayerController/PlayerBody.glb" type="PackedScene" id=4]
[ext_resource path="res://Entities/PlayerController/PlayerHead.glb" type="PackedScene" id=5]
[ext_resource path="res://Entities/Legacy/Jetpack/Material_002.material" type="Material" id=6]
[ext_resource path="res://Entities/Legacy/Jetpack/Flame.material" type="Material" id=7]
[ext_resource path="res://Entities/Legacy/Jetpack/Wings.material" type="Material" id=8]
[ext_resource path="res://res/sfx/splash.ogg" type="AudioStream" id=9]
[ext_resource path="res://res/sfx/freeze.ogg" type="AudioStream" id=10]
[ext_resource path="res://res/sfx/teleport.ogg" type="AudioStream" id=11]

[sub_resource type="SeparationRayShape3D" id=1]
length = 0.638182

[sub_resource type="CapsuleShape3D" id=2]
radius = 0.242122
height = 0.578151

[sub_resource type="ArrayMesh" id=3]
resource_name = "Fire"
surfaces/0 = {
"aabb": AABB( -0.856384, -2.95954, -0.856384, 1.71278, 3.26708, 1.71277 ),
"array_data": PackedByteArray( 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 191, 122, 224, 0, 0, 227, 144, 51, 127, 58, 40, 23, 56, 0, 0, 0, 0, 24, 105, 61, 192, 0, 0, 0, 128, 122, 224, 0, 0, 227, 144, 51, 127, 247, 45, 0, 56, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 63, 122, 224, 0, 0, 227, 144, 51, 127, 123, 46, 85, 56, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 63, 0, 224, 122, 0, 238, 121, 31, 127, 123, 46, 85, 56, 0, 0, 0, 0, 24, 105, 61, 192, 0, 0, 0, 128, 0, 224, 122, 0, 238, 121, 31, 127, 247, 45, 0, 56, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 63, 0, 224, 122, 0, 238, 121, 31, 127, 232, 48, 208, 55, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 191, 0, 224, 134, 0, 238, 135, 31, 127, 115, 45, 84, 55, 0, 0, 0, 0, 24, 105, 61, 192, 0, 0, 0, 128, 0, 224, 134, 0, 238, 135, 31, 127, 247, 45, 0, 56, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 191, 0, 224, 134, 0, 238, 135, 31, 127, 58, 40, 23, 56, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 63, 134, 224, 0, 0, 227, 112, 51, 127, 232, 48, 208, 55, 0, 0, 0, 0, 24, 105, 61, 192, 0, 0, 0, 128, 134, 224, 0, 0, 227, 112, 51, 127, 247, 45, 0, 56, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 191, 134, 224, 0, 0, 227, 112, 51, 127, 115, 45, 84, 55 ),
"array_index_data": PackedByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 7 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 12
}

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( -1, 0, -1, 2, 10.1322, 2 ),
"array_data": PackedByteArray( 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 191, 0, 203, 115, 0, 60, 155, 209, 127, 85, 56, 187, 56, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 0, 203, 115, 0, 37, 147, 205, 127, 227, 57, 21, 54, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 203, 115, 0, 62, 156, 210, 127, 102, 56, 19, 57, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 191, 0, 203, 115, 0, 60, 155, 209, 127, 85, 56, 187, 56, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 191, 0, 203, 115, 0, 32, 145, 205, 127, 132, 57, 47, 54, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 0, 203, 115, 0, 37, 147, 205, 127, 227, 57, 21, 54, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 0, 12, 130, 0, 127, 0, 0, 129, 214, 56, 168, 59, 0, 0, 0, 0, 154, 29, 34, 65, 0, 0, 0, 128, 0, 12, 130, 0, 127, 0, 0, 129, 47, 56, 53, 48, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 12, 130, 0, 127, 0, 0, 129, 17, 55, 168, 59, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 12, 126, 0, 127, 0, 0, 127, 3, 47, 5, 60, 0, 0, 0, 0, 154, 29, 34, 65, 0, 0, 0, 128, 0, 12, 126, 0, 127, 0, 0, 127, 40, 51, 211, 176, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 12, 126, 0, 127, 0, 0, 127, 103, 53, 5, 60, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 126, 12, 0, 0, 0, 0, 129, 127, 240, 49, 5, 60, 0, 0, 0, 0, 154, 29, 34, 65, 0, 0, 0, 128, 126, 12, 0, 0, 0, 0, 129, 127, 203, 52, 211, 176, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 126, 12, 0, 0, 0, 0, 129, 127, 159, 54, 5, 60, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 130, 12, 0, 0, 0, 0, 129, 129, 103, 56, 168, 59, 0, 0, 0, 0, 154, 29, 34, 65, 0, 0, 0, 128, 130, 12, 0, 0, 0, 0, 129, 129, 128, 55, 53, 48, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 130, 12, 0, 0, 0, 0, 129, 129, 51, 54, 168, 59, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 63, 0, 203, 141, 0, 60, 101, 209, 127, 164, 55, 116, 51, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 203, 141, 0, 30, 111, 204, 127, 168, 52, 99, 55, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 203, 141, 0, 63, 99, 210, 127, 133, 55, 244, 49, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 63, 0, 203, 141, 0, 60, 101, 209, 127, 164, 55, 116, 51, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 63, 0, 203, 141, 0, 24, 112, 204, 127, 87, 53, 58, 55, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 203, 141, 0, 30, 111, 204, 127, 168, 52, 99, 55, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 191, 141, 203, 0, 0, 45, 160, 187, 127, 132, 57, 47, 54, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 141, 203, 0, 0, 37, 176, 166, 127, 133, 55, 244, 49, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 141, 203, 0, 0, 45, 158, 190, 127, 227, 57, 21, 54, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 191, 141, 203, 0, 0, 45, 160, 187, 127, 132, 57, 47, 54, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 63, 141, 203, 0, 0, 35, 180, 162, 127, 164, 55, 116, 51, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 141, 203, 0, 0, 37, 176, 166, 127, 133, 55, 244, 49, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 63, 115, 203, 0, 0, 42, 90, 178, 127, 87, 53, 58, 55, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 115, 203, 0, 0, 36, 79, 164, 127, 102, 56, 19, 57, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 115, 203, 0, 0, 42, 91, 179, 127, 168, 52, 99, 55, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 63, 115, 203, 0, 0, 42, 90, 178, 127, 87, 53, 58, 55, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 191, 115, 203, 0, 0, 35, 76, 162, 127, 85, 56, 187, 56, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 115, 203, 0, 0, 36, 79, 164, 127, 102, 56, 19, 57, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 63, 0, 129, 0, 0, 72, 0, 152, 127, 87, 53, 58, 55, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 191, 0, 129, 0, 0, 72, 0, 152, 127, 132, 57, 47, 54, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 191, 0, 129, 0, 0, 71, 0, 152, 127, 85, 56, 187, 56, 255, 59, 91, 191, 185, 116, 157, 62, 255, 59, 91, 63, 0, 129, 0, 0, 72, 0, 152, 127, 87, 53, 58, 55, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 63, 0, 129, 0, 0, 72, 0, 153, 127, 164, 55, 116, 51, 255, 59, 91, 63, 185, 116, 157, 62, 255, 59, 91, 191, 0, 129, 0, 0, 72, 0, 152, 127, 132, 57, 47, 54 ),
"array_index_data": PackedByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 6 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 42
}
surfaces/1 = {
"aabb": AABB( -4.16018, -3.93203, -4.15793, 8.31811, 14.0643, 8.31811 ),
"array_data": PackedByteArray( 0, 0, 0, 0, 154, 29, 34, 65, 0, 0, 0, 128, 89, 0, 89, 0, 89, 0, 167, 127, 1, 56, 79, 195, 193, 13, 133, 64, 107, 175, 117, 192, 193, 13, 133, 192, 89, 0, 89, 0, 89, 0, 167, 127, 212, 65, 117, 68, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 89, 0, 89, 0, 89, 0, 167, 127, 83, 60, 116, 64, 0, 0, 0, 0, 154, 29, 34, 65, 0, 0, 0, 128, 167, 0, 167, 0, 89, 0, 167, 129, 1, 56, 79, 195, 58, 32, 133, 192, 99, 166, 123, 192, 58, 32, 133, 64, 167, 0, 167, 0, 89, 0, 167, 129, 169, 191, 130, 68, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 167, 0, 167, 0, 89, 0, 167, 129, 32, 173, 116, 64 ),
"array_index_data": PackedByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 8 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 6
}

[node name="CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.612947, 0 )
collision_layer = 16
collision_mask = 7
script = ExtResource( 1 )

[node name="FPSCamera" type="Camera3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.47439, -0.0379261 )
far = 2000.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.0295595, 0 )
shape = SubResource( 1 )

[node name="EyePoint" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.474, -0.038 )

[node name="TPSCameraBehind" type="Camera3D" parent="EyePoint"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )
far = 2000.0

[node name="TPSCameraFront" type="Camera3D" parent="EyePoint"]
transform = Transform3D( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, -0.2, -1.5 )
far = 2000.0

[node name="FPSCamera" type="Camera3D" parent="EyePoint"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.000390053, 7.39247e-05 )
far = 2000.0

[node name="Hand" type="Node3D" parent="EyePoint"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.14295, -0.187329, -0.197776 )

[node name="PlayerGUI" parent="." instance=ExtResource( 2 )]

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.607552, 0 )

[node name="CollisionShape2" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.107788, 0 )
shape = SubResource( 2 )

[node name="AudioNode" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.122485, 0 )

[node name="Jetpack" type="AudioStreamPlayer3D" parent="AudioNode"]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="Splash" type="AudioStreamPlayer3D" parent="AudioNode"]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="Freeze" type="AudioStreamPlayer3D" parent="AudioNode"]
stream = ExtResource( 10 )
volume_db = -2.0

[node name="Teleport" type="AudioStreamPlayer3D" parent="AudioNode"]
stream = ExtResource( 11 )
volume_db = -3.0

[node name="PlayerHead" parent="." instance=ExtResource( 5 )]
transform = Transform3D( -1.30337e-08, 0, 0.1, 0, 0.08, 0, -0.08, 0, -1.62921e-08, 0, 0.251803, -0.00973667 )

[node name="PlayerBody" parent="." instance=ExtResource( 4 )]
transform = Transform3D( 0.17, 0, 0, 0, 0.17, 0, 0, 0, 0.17, 0, -0.588197, -0.00965127 )

[node name="Back" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.055, 0.137808, 0.184 )
visible = false

[node name="Jetpack" type="Node3D" parent="Back"]
transform = Transform3D( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0.0595563, -0.0931615, 0.00169477 )
visible = false

[node name="Fire" type="MeshInstance3D" parent="Back/Jetpack"]
transform = Transform3D( 0.0221961, 0, 0.0221961, 0, 0.0313901, 0, -0.0221961, 0, 0.0221961, 0, 0.00324917, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Jetpack" type="MeshInstance3D" parent="Back/Jetpack"]
transform = Transform3D( 0.0221961, 0, 0.0221961, 0, 0.0313901, 0, -0.0221961, 0, 0.0221961, 0, 0.00324917, 0 )
mesh = SubResource( 4 )
material/0 = null
material/1 = null

[node name="Attachments" type="Node3D" parent="."]
